2017-05-17  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO-KUparser:
	Speed issues with KUparser.
	First epoch slower: do we need to pre-allocate and not use cudaMalloc?
	Slow-down of long runs: is it gpu copy or parsing algorithm? (dynamic-oracle gives clues)

2017-04-07  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:

	* TODO8:
	# handle KnetFree==nothing in knetgc()
	# gpu(false) does not clear out Knet memory structures?
	# add mean/std for KnetArray.
	# implement nce. debug nce8 branch. try on large data/vocab. why doesn't it converge on ptb?
	# broadcast kernels: debug 16/17, add tests, add benchmarks.
	# check batch normalization in resnet, add it to src. -- waiting for ilker.
	# document load/save via JLD.
	# recover kuparser.
	# navigation: implement world represenation.
	# apply new rnn ideas to doc, readme, tutorial, slides, ijulia.
	# fix reduction kernels for large matrices (10K-100K rows start giving bad answers): enis looking
	# Latest master julia6 failing on nightly; AutoGrad also fails.
	# try feeding rnnlm subset of embed matrix as weight.
	# functional lstm interface defining multi-output grad2 function.
	# Setup attobot for next release: https://github.com/attobot/attobot.
	# prepare and submit julia4/5 benchmarks: find out why benchmarks are slower on julia5/6: https://github.com/JuliaLang/julia/issues/18135 ?
	# Issue 89: reduced_dims -> reduced_indices in 0.5.1, stop using unexported functions from base. Other examples: to_indexes, dims2string, deepcopy_internal, LinearFast, show_backtrace, decolon (in AutoGrad).
	# AutoGrad docs convert from comments to docstrings in core.jl and include in Knet manual. wip in newdocs branch.
	# AutoGrad tests convert to the new test system.
	# add some test for deconv vs conv, gclip.
	# gpu switching back and forth does not seem to work. do we really need multiple handles for cublas, cudnn? do we need them for libknet8?
	# AutoGrad: run all tests with KnetArrays